<?xml version="1.0" encoding="utf-8"?>
<!--
/*******************************************************************************
 * Copyright 2013 Gabriele Mariotti
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *******************************************************************************/
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/settings_update" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_updateWifi"
            android:summary="@string/settings_updateOnlyWifiSummary"
            android:title="@string/settings_updateOnlyWifi" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_updateAutomatic"
            android:summary="@string/settings_updateAutomaticSummary"
            android:title="@string/settings_updateAutomatic" />

        <ListPreference
            android:defaultValue="30"
            android:dependency="pref_updateAutomatic"
            android:dialogTitle="@string/settings_updateTimeoutDialogTitle"
            android:entries="@array/update_timeout_options"
            android:entryValues="@array/update_timeout_values"
            android:key="pref_updateTimeout"
            android:title="@string/settings_updateTimeout" />
        <ListPreference
            android:defaultValue="5"
            android:dependency="pref_updateAutomatic"
            android:dialogTitle="@string/settings_updateFrequencyDialogTitle"
            android:entries="@array/update_frequency_options"
            android:entryValues="@array/update_frequency_values"
            android:key="pref_updateFrequency"
            android:title="@string/settings_updateFrequency" />

        <MultiSelectListPreference
            android:defaultValue="@array/empty_array"
            android:dependency="pref_updateAutomatic"
            android:dialogTitle="@string/settings_updateFrequencyMultiDialogTitle"
            android:entries="@array/update_frequency_options"
            android:entryValues="@array/update_frequency_values"
            android:key="pref_updateFrequencyMulti"
            android:title="@string/settings_updateFrequencyMulti" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_updateStartup"
            android:summary="@string/settings_updateOnStartupSummary"
            android:title="@string/settings_updateOnStartup" />

        <EditTextPreference
            android:defaultValue="@string/setting_serverIpDefault"
            android:dialogTitle="@string/settings_serverIp"
            android:key="pref_serverIP"
            android:title="@string/settings_serverIp" />

        <RingtonePreference
            android:key="pref_notificationSound"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true"
            android:title="@string/setting_notificationSound" />

        <it.gmariotti.android.examples.preference.NumberPickerPreference
            android:defaultValue="1"
            android:dialogTitle="@string/settings_updateTimeoutnPickerDialogTitle"
            android:key="pref_updateTimeoutPicker"
            android:title="@string/settings_updateTimeoutnPicker" />
    </PreferenceCategory>

</PreferenceScreen>